identity/clusters/base/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: identity
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.${PRIMARY_DOMAIN}
      secretName: keycloak-tls
  rules:
    - host: keycloak.${PRIMARY_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
